Vertex / Weight Paint. Blender does not show if vertex is selected. #69051

Closed
opened 2019-08-22 14:34:49 +02:00 by item412 · 16 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-22 10:21, hash: d13952e603
Worked: (optional)

Short description of error

Select All works fine, but for Select and Lasso Select there is no visual feedback.

Exact steps for others to reproduce the error

  1. Enter Vertex Paint mode
  2. Turn On vertex selection
  3. Select anything

vertexSelect.blend

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-22 10:21, hash: `d13952e603` Worked: (optional) **Short description of error** Select All works fine, but for Select and Lasso Select there is no visual feedback. **Exact steps for others to reproduce the error** 1. Enter Vertex Paint mode 2. Turn On vertex selection 3. Select anything [vertexSelect.blend](https://archive.blender.org/developer/F7686419/vertexSelect.blend)
Author

Added subscriber: @item412

Added subscriber: @item412

#69137 was marked as duplicate of this issue

#69137 was marked as duplicate of this issue

#69057 was marked as duplicate of this issue

#69057 was marked as duplicate of this issue

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

In Blender 2.8 Stable working fine... in 2.81 some problems there...
in 2.81 Vertices can be selected but we have to selects from a large range to select even on vertex
more checking...

In Blender 2.8 Stable working fine... in 2.81 some problems there... in 2.81 Vertices can be selected but we have to selects from a large range to select even on vertex more checking...

Hum! In 2.81 very strange behavior, You can select whole face but can individual vertex...
What ever method you are using for selection (box select, circle select or lasso select) if you select all vertex of the face then it's will be shown as selection otherwise not.
like whole face can be selected (in vertex selection mode):
image.png
or
image.png
In-short when all vertices of face is selected selection shows..
Note: blender 2.80 works fine

Hum! In 2.81 very strange behavior, You can select whole face but can individual vertex... What ever method you are using for selection (box select, circle select or lasso select) if you select all vertex of the face then it's will be shown as selection otherwise not. like whole face can be selected (in vertex selection mode): ![image.png](https://archive.blender.org/developer/F7686755/image.png) or ![image.png](https://archive.blender.org/developer/F7686759/image.png) In-short when all vertices of face is selected selection shows.. **Note:** blender 2.80 works fine
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Same is true for weightpaint.
I dare setting this to High, will check what caused this...

Same is true for weightpaint. I dare setting this to High, will check what caused this...
Philipp Oeser changed title from Vertex Paint. Blender does not show if vertex is selected. to Vertex / Weight Paint. Blender does not show if vertex is selected. 2019-08-22 16:46:22 +02:00
Clément Foucault was assigned by Philipp Oeser 2019-08-22 17:05:51 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

This broke with 9c010c44f4
@fclem: mind checking? (feel free to lower prio if you think it is unappropriate...)

This broke with 9c010c44f4 @fclem: mind checking? (feel free to lower prio if you think it is unappropriate...)
Member

Added subscriber: @Bolthead

Added subscriber: @Bolthead
Member

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis

This issue was referenced by 7273dbd47b

This issue was referenced by 7273dbd47b7ab7ae0016f17f95e71221fb8773d2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Blender 2.81.3 beta
Finally it work for sure on UV Editor select and deselect yaaaay. resolved
@lichtwerk

Blender 2.81.3 beta Finally it work for sure on UV Editor select and deselect yaaaay. resolved @lichtwerk

@Kent-Davis Please! Don'ts fill the bugs taker with unnecessary discussions/comments...

@Kent-Davis Please! Don'ts fill the bugs taker with unnecessary discussions/comments...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69051
No description provided.