Fix T69051 Vertex Paint: Selection not show in vertex select mode.